[project]
name = "remote-asr"
version = "0.1.0"
description = "Minimal authenticated audio transcription API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.0",
    "httpx[socks]>=0.28.1",
    "pydantic-ai-slim[google]>=1.0.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]
